--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@prisma/client": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
