--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^5.7.0",
     "argon2": "^0.31.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
