--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.0",
     "argon2": "^0.31.2",
+    "chart.js": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "nextjs-toploader": "^1.6.4",
