--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "nextjs-toploader": "^1.6.4",
+    "node-vibrant": "^3.2.1-alpha.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
