--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "verceldeploy": "prisma generate && next build"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
